--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,11 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
+spring.security.user.name=raja
+spring.security.user.password=Pass123
+
+jwt.secret.key=bhsdbfewfnehjerierjnioewninuoefwhinwiovnreqiub
+jwt.expiry.duration=3600000 
+jwt.issuer=raja
+
+
